# tai-mcp-ssh

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
openspec/changes/add-session-reset/: design.md  proposal.md  tasks.md
openspec/changes/add-session-reset/specs/remote-sessions/: spec.md
openspec/changes/archive/2026-05-13-bootstrap-ssh-mcp-server/: design.md  tasks.md
openspec/changes/archive/2026-05-13-bootstrap-ssh-mcp-server/specs/cli-tool/: spec.md
openspec/changes/archive/2026-05-13-bootstrap-ssh-mcp-server/specs/file-transfer/: spec.md
openspec/changes/archive/2026-05-13-bootstrap-ssh-mcp-server/specs/host-inventory/: spec.md
openspec/changes/archive/2026-05-13-bootstrap-ssh-mcp-server/specs/output-capture/: spec.md
openspec/changes/archive/2026-05-13-bootstrap-ssh-mcp-server/specs/remote-sessions/: spec.md
openspec/changes/archive/2026-06-10-reload-hosts-on-call/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-11-confine-get-local-path/: proposal.md  tasks.md
openspec/changes/bootstrap-ssh-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-ssh-mcp-server/specs/audit-log/: spec.md
openspec/changes/bootstrap-ssh-mcp-server/specs/remote-sessions/: spec.md
openspec/changes/confine-get-local-path/: design.md  tasks.md
openspec/changes/confine-get-local-path/specs/file-transfer/: spec.md
openspec/changes/reload-hosts-on-call/: tasks.md
openspec/changes/reload-hosts-on-call/specs/audit-log/: spec.md
openspec/changes/reload-hosts-on-call/specs/host-inventory/: spec.md
openspec/specs/audit-log/: spec.md
openspec/specs/cli-tool/: spec.md
openspec/specs/file-transfer/: spec.md
openspec/specs/host-inventory/: spec.md
openspec/specs/output-capture/: spec.md
openspec/specs/remote-sessions/: spec.md
src/tai_mcp_ssh/: __init__.py  audit.py  cli.py  config.py  errors.py  paths.py  server.py  sessions.py  ssh.py  transfer.py
tests/unit/: test_audit.py  test_cli.py  test_config.py  test_paths.py  test_server.py  test_sessions.py  test_ssh.py  test_transfer.py
